--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "webpack": "^5.43.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^4.7.2",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
